# wavekat-tts

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: README.md  ci.yml  export-clone-onnx.yml  export-onnx.yml  release-plz.yml  update-bench.yml
bench/results/: cpu-int4.csv  cuda-t4-int4.csv
crates/wavekat-tts/: CHANGELOG.md  Cargo.toml
crates/wavekat-tts/examples/: bench_rtf.rs  synthesize.rs  synthesize_clone.rs
crates/wavekat-tts/src/: error.rs  glibc_compat.rs  lib.rs  traits.rs  types.rs
crates/wavekat-tts/src/backends/: cosyvoice.rs  mod.rs
crates/wavekat-tts/src/backends/qwen3_tts/: clone_model.rs  download.rs  mel.rs  mod.rs  model.rs  sampler.rs  tokenizer.rs
docs/: 02-execution-providers.md  02-proposed-core-wav-io.md  03-qwen3-tts-backend.md  04-qwen3-tts-1.7b-migration.md  05-mlx-backend.md  06-colab-cuda-gpu.md  06-cuda-provider.md  07-benchmarking.md  08-qwen3-tts-0.6b-voice-clone.md  CLAUDE.md  QUANTIZATION.md  proposed-core-from-vec.md
scripts/: update_bench_table.py
tools/onnx-export/: PLAN.md  export_code_predictor.py  export_talker.py  export_vocoder.py  quantize_int4.py  requirements.txt  run_all.sh  validate.py
tools/qwen3-tts-onnx/: .gitignore  Makefile  PLAN.md  README.md  README_CLONE.md  export_code_predictor.py  export_embeddings.py  export_speaker_encoder.py  export_talker.py  export_tokenizer_encoder.py  export_vocoder.py  generate.py  generate_clone_onnx.py  generate_onnx.py  mask_patch.py  quantize_int4.py  requirements.txt  run_all.sh  validate.py
tools/qwen3-tts-onnx/fixtures/: README.md
